Fixed wrong font in Gear section

--- a/sheet/jvm/src/main/resources/WEB-INF/defaults.css
+++ b/sheet/jvm/src/main/resources/WEB-INF/defaults.css
@@ -63,6 +63,10 @@ label {
     width: auto
 }
 
+p {
+    font-family: 'Montserrat', sans-serif;
+}
+
 input {
   background-color: ${input-background-colour};
   color: ${input-colour};
